# hibp_check

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
src/: hibp_check.pyi  lib.rs  main.rs
