[package]
name = "hibp_check"
version = "0.1.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"]}
sha1 = "0.6"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
num-format = "0.4.4"
pyo3 = {version = "0.24.2", features = ["extension-module"]}
rpassword = "7.4.0"

[build-dependencies]
winres = "0.1.12"

[lib]
name = "hibp_check"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hibp_check"
path = "src/main.rs"
